--- a/work.html
+++ b/work.html
@@ -79,10 +79,9 @@
               FIND FOOD TRUCKS IN THE CITY OF MELBOURNE!
             </div>
             <br />
-            Technology: HTML5, CSS3, Responsive, Bootstrap4 UI
+            Technology: Responsive UI with Bootstrap4, Node JS Express,
             <br />
-            NodeJS, Express, Geo-location, Mapbox, Local Authentication, MongoDB
-            Atlas
+            Geo-location, Mapbox API, Local Authentication, MongoDB Atlas
           </div>
         </div>
         <div class="item">
@@ -97,11 +96,12 @@
 
           <div class="item-panel item-note">
             <div class="item-highlight">
-              INSTANT ACCESS TO LOCAL INFORMATION ON YOUR NEXT TRIP
+              INSTANT ACCESS TO LOCAL TRAVEL INFORMATION
             </div>
             <br />
-            Technology: React, HTML5, CSS3, Responsive, Material UI Firebase,
-            Geo-location, Weather Forecast, Travel Info, Firebase Authentication
+            Technology: React, Responsive UI with Material UI, Firestore,
+            Location IQ API, Open Weather API, TomTom API, Firebase
+            Authentication
           </div>
         </div>
         <div class="item">
@@ -115,10 +115,13 @@
           </div>
 
           <div class="item-panel item-note">
-            <div class="item-highlight">SALSA STUDIO!</div>
+            <div class="item-highlight">
+              SALSA MADE EASY WITH VIDEO LESSONS
+            </div>
             <br />
-            Technology: React, Redux-Forms, React-Router, Semantic UI, HTML5
-            Video, OAuth2 Authentication
+            Technology: React-Redux, Redux-Forms, React-Router, Responsive UI
+            with CSS-Grid, HTML5 Video, Google OAuth2 Authentication, JSON
+            Server, REST API.
           </div>
         </div>
 
