--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="text-secondary">Chu </span>
       </h1>
       <h2 class="sm-heading">
-        Full Stack Software Engineer
+        Javascript Software Engineer
       </h2>
       <div class="icons">
         <a href="https://www.linkedin.com/in/alanchu00/">
