--- a/work.html
+++ b/work.html
@@ -99,9 +99,9 @@
               INSTANT ACCESS TO LOCAL TRAVEL INFORMATION
             </div>
             <br />
-            Technology: React, Responsive UI with Material UI, Firestore,
-            Location IQ API, Open Weather API, TomTom API, Firebase
-            Authentication
+            Technology: Responsive Material UI, Firestore, Location IQ API, Open
+            Weather API, TomTom API, Firebase Authentication, Local Data Cache,
+            React.
           </div>
         </div>
         <div class="item">
