--- a/work.html
+++ b/work.html
@@ -101,7 +101,7 @@
             <br />
             Technology: Responsive Material UI, Firestore, Location IQ API, Open
             Weather API, TomTom API, Firebase Authentication, Local Data Cache,
-            React.
+            React
           </div>
         </div>
         <div class="item">
@@ -118,10 +118,9 @@
             <div class="item-highlight">
               SALSA MADE EASY WITH VIDEO LESSONS
             </div>
-            <br />
             Technology: React-Redux, Redux-Forms, React-Router, Responsive UI
-            with CSS-Grid, HTML5 Video, Google OAuth2 Authentication, JSON
-            Server, REST API.
+            with CSS-Grid, HTML5 Video, Google OAuth2 Authentication, REST API,
+            MongoDB Cloud, Web Hooks, Serverless Architecture
           </div>
         </div>
 
