--- a/work.html
+++ b/work.html
@@ -53,25 +53,49 @@
     </header>
 
     <main id="work">
+      <div class="loading">
+        <div id="spinner-placeholder">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+
       <h1 class="lg-heading">
-        My
+        Recent
         <span class="text-secondary">Work</span>
       </h1>
-      <h2 class="sm-heading">
-        Some of my recent work...
-      </h2>
       <div class="projects">
         <div class="item">
           <div class="item-container">
             <a href="#!">
               <img src="img/projects/melfoodtrucks.jpg" alt="Project" />
             </a>
-            <a
-              href="https://melbournefoodtrucks.herokuapp.com/"
-              class="btn-light"
-            >
-              <i class="fas fa-eye"></i> Visit Website
-            </a>
+            <div class="btn-container">
+              <a
+                class="btn-light"
+                onclick="showSpinner()"
+                href="https://melbournefoodtrucks.herokuapp.com/"
+              >
+                <i class="fas fa-eye"></i> Website
+              </a>
+              <a
+                class="btn-light"
+                onclick="loadDiagram()"
+                href="https://raw.githubusercontent.com/alanchu9222/react-bootcamp/master/image_repo/food-truck.jpg"
+              >
+                Architecture
+              </a>
+            </div>
           </div>
 
           <div class="item-panel item-note">
@@ -79,8 +103,7 @@
               FIND FOOD TRUCKS IN THE CITY OF MELBOURNE!
             </div>
             <br />
-            Technology: Responsive UI with Bootstrap4, Node JS Express,
-            <br />
+            Technology: Responsive UI with Bootstrap4, Node JS, Express,
             Geo-location, Mapbox API, Local Authentication, MongoDB Atlas
           </div>
         </div>
@@ -89,19 +112,32 @@
             <a href="#!">
               <img src="img/projects/kiwiscout.jpg" alt="Project" />
             </a>
-            <a href="https://kiwiscout.herokuapp.com/" class="btn-light">
-              <i class="fas fa-eye"></i> Visit Website
-            </a>
+            <div class="btn-container">
+              <a
+                class="btn-light"
+                onclick="showSpinner()"
+                href="https://kiwiscout.herokuapp.com/"
+              >
+                <i class="fas fa-eye"></i> Website
+              </a>
+              <a
+                class="btn-light"
+                onclick="loadDiagram()"
+                href="https://raw.githubusercontent.com/alanchu9222/react-bootcamp/master/image_repo/travel-guide.jpg"
+              >
+                Architecture
+              </a>
+            </div>
           </div>
 
           <div class="item-panel item-note">
             <div class="item-highlight">
-              INSTANT ACCESS TO LOCAL TRAVEL INFORMATION
+              INSTANT ACCESS TO LOCAL INFORMATION
             </div>
             <br />
-            Technology: Responsive Material UI, Firestore, Location IQ API, Open
-            Weather API, TomTom API, Firebase Authentication, Local Data Cache,
-            React
+            Technology: React, Responsive Material UI, Firestore, Location IQ
+            API, Open Weather API, Tom Tom API, Firebase Authentication, Local
+            Data Cache
           </div>
         </div>
         <div class="item">
@@ -109,34 +145,54 @@
             <a href="#!">
               <img src="img/projects/project3.jpg" alt="Project" />
             </a>
-            <a href="https://salsa-studio.herokuapp.com/" class="btn-light">
-              <i class="fas fa-eye"></i> Visit Website
-            </a>
+            <div class="btn-container">
+              <a
+                class="btn-light"
+                onclick="showSpinner()"
+                href="https://salsa-studio.herokuapp.com/"
+              >
+                <i class="fas fa-eye"></i> Website
+              </a>
+              <a
+                class="btn-light"
+                onclick="loadDiagram()"
+                href="https://raw.githubusercontent.com/alanchu9222/react-bootcamp/master/image_repo/salsa-studio.jpg"
+              >
+                Architecture
+              </a>
+            </div>
           </div>
 
           <div class="item-panel item-note">
-            <div class="item-highlight">
-              SALSA MADE EASY WITH VIDEO LESSONS
-            </div>
-            Technology: React-Redux, Redux-Forms, React-Router, Responsive UI
-            with CSS-Grid, HTML5 Video, Google OAuth2 Authentication, REST API,
-            MongoDB Cloud, Web Hooks, Serverless Architecture
+            <div class="item-highlight">SALSA STUDIO!</div>
+            <br />
+            Technology: React, Redux-Forms, React-Router, Responsive UI with CSS
+            Grid, HTML5 Video, Google OAuth2 Authentication, REST API, MOngo DB
+            Cloud, Web Hooks, Serverless Architecture
           </div>
         </div>
-
         <div class="item">
           <div class="item-container">
             <a href="#!">
               <img src="img/projects/project4.jpg" alt="Project" />
             </a>
-            <a
-              href="https://melbournefoodtrucks.herokuapp.com/"
-              class="btn-light"
-            >
-              <i class="fas fa-eye"></i> Visit Website
-            </a>
+            <div class="btn-container">
+              <a
+                class="btn-light"
+                onclick="showSpinner()"
+                href="https://melbournefoodtrucks.herokuapp.com"
+              >
+                <i class="fas fa-eye"></i> Website
+              </a>
+              <a
+                class="btn-light"
+                onclick="loadDiagram()"
+                href="https://raw.githubusercontent.com/alanchu9222/react-bootcamp/master/image_repo/food-truck.jpg"
+              >
+                Architecture
+              </a>
+            </div>
           </div>
-
           <div class="item-panel item-note">
             <div class="item-highlight">MELBOURNE FOOD TRUCKS WITH CMS!</div>
             <br />
