--- a/work.html
+++ b/work.html
@@ -117,7 +117,7 @@
               <a
                 class="btn-light"
                 onclick="showSpinner()"
-                href="https://kiwiscout.herokuapp.com/"
+                href="https://local-travel-guide.herokuapp.com/"
               >
                 <i class="fas fa-eye"></i> Website
               </a>
