--- a/work.html
+++ b/work.html
@@ -135,9 +135,9 @@
             <div class="item-highlight">
               INSTANT ACCESS TO TRAVEL INFORMATION WITH LOCAL TRAVEL GUIDE
             </div>
-            Technology: React, Responsive Material UI, Firestore, Location IQ
-            API, Open Weather API, Tom Tom API, Firebase Authentication, Local
-            Data Cache
+            Technology: React, Redux, React Router, Responsive Material UI,
+            Firestore, Location IQ API, Open Weather API, Tom Tom API, Firebase
+            Authentication, Local Data Cache
           </div>
         </div>
         <div class="item">
@@ -181,23 +181,26 @@
               <a
                 class="btn-light"
                 onclick="showSpinner()"
-                href="https://melbournefoodtrucks.herokuapp.com"
+                href="https://gitlab.com/alanchu/localtravelguide"
               >
                 <i class="fas fa-eye"></i> Website
               </a>
               <a
                 class="btn-light"
                 onclick="loadDiagram()"
-                href="https://raw.githubusercontent.com/alanchu9222/react-bootcamp/master/image_repo/food-truck-cms.jpg"
+                href="img/projects/project4-arch-diagram.png"
               >
                 Architecture
               </a>
             </div>
           </div>
           <div class="item-panel item-note">
-            <div class="item-highlight">MELBOURNE FOOD TRUCKS WITH CMS!</div>
+            <div class="item-highlight">
+              GITLAB CI/CD for LOCAL TRAVEL GUIDE PROJECT
+            </div>
             <br />
-            This project is work in progress...
+            Technologies: GitLab Pipeline for automated Build/Test/Deployment,
+            Jest Framework, Enzyme, JSDOM, Docker, Heroku Containers.
             <br />
           </div>
         </div>
